--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="map"></div>
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&callback=initMap&libraries=places&v=weekly"
       defer
     ></script>
   </body>
